--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -1,1 +1,126 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyNYBWr5iFyBxpKngH4O/ne6"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":null,"metadata":{"id":"UY_cxc6hZ_zl"},"outputs":[],"source":[]},{"cell_type":"markdown","source":["# Linear Regression"],"metadata":{"id":"YJGdDYNtaHxl"}},{"cell_type":"markdown","source":["## Loading all Necessary Libraries"],"metadata":{"id":"6H1ji2X4aMUn"}},{"cell_type":"code","source":["import pandas as pd\n","import numpy as np\n","import matplotlib.pyplot as plt\n","import seaborn as sns\n","\n","from sklearn.datasets import fetch_california_housing\n","from sklearn.model_selection import train_test_split\n","from sklearn.linear_model import LinearRegression,Ridge,Lasso\n","from sklearn.metrics import mean_squared_error, r2_score\n","from sklearn.preprocessing import StandardScaler"],"metadata":{"id":"nf_C9n1HaUjZ","executionInfo":{"status":"ok","timestamp":1754485427834,"user_tz":-300,"elapsed":18,"user":{"displayName":"Amirzeb Badshah","userId":"13288586639544571224"}}},"execution_count":23,"outputs":[]},{"cell_type":"code","source":["data = fetch_california_housing()\n","df = pd.DataFrame(data.data, columns=data.feature_names)\n","df['Target'] = data.target\n","print(df.head(5))"],"metadata":{"id":"P3BcrZ42aUY-"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## EDA to explore the data set"],"metadata":{"id":"6N451RYKbWLL"}},{"cell_type":"code","source":["plt.figure(figsize=(5,5))\n","sns.histplot(df['Target'], bins=50, kde=True)\n","plt.xlabel('Target')\n","plt.ylabel('Frequency')\n","plt.title('Distribution of Target Variable')\n","plt.show()"],"metadata":{"id":"zHptiRkCaUFD"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":["x = df.drop('Target', axis=1)\n","y = df['Target']"],"metadata":{"id":"31rJk0HnaT66","executionInfo":{"status":"ok","timestamp":1754485051429,"user_tz":-300,"elapsed":24,"user":{"displayName":"Amirzeb Badshah","userId":"13288586639544571224"}}},"execution_count":15,"outputs":[]},{"cell_type":"code","source":["X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"],"metadata":{"id":"-UGgJaPyaTxV","executionInfo":{"status":"ok","timestamp":1754485052955,"user_tz":-300,"elapsed":12,"user":{"displayName":"Amirzeb Badshah","userId":"13288586639544571224"}}},"execution_count":16,"outputs":[]},{"cell_type":"code","source":["scaler = StandardScaler()\n","X_train_scaled = scaler.fit_transform(X_train)\n","X_test_scaled = scaler.transform(X_test)"],"metadata":{"id":"VcTOYf5oaTmT","executionInfo":{"status":"ok","timestamp":1754485088126,"user_tz":-300,"elapsed":12,"user":{"displayName":"Amirzeb Badshah","userId":"13288586639544571224"}}},"execution_count":19,"outputs":[]},{"cell_type":"code","source":["lr = LinearRegression()\n","lr.fit(X_train_scaled, y_train)\n","y_pred_lr = lr.predict(X_test_scaled)"],"metadata":{"id":"2VTyFMiPcmNC","executionInfo":{"status":"ok","timestamp":1754485362722,"user_tz":-300,"elapsed":85,"user":{"displayName":"Amirzeb Badshah","userId":"13288586639544571224"}}},"execution_count":21,"outputs":[]},{"cell_type":"code","source":["ridge = Ridge(alpha=1.0)\n","ridge.fit(X_train_scaled, y_train)\n","y_pred_ridge = ridge.predict(X_test_scaled)"],"metadata":{"id":"wwaIVGXXcmAX","executionInfo":{"status":"ok","timestamp":1754485433509,"user_tz":-300,"elapsed":66,"user":{"displayName":"Amirzeb Badshah","userId":"13288586639544571224"}}},"execution_count":24,"outputs":[]},{"cell_type":"code","source":["lasso = Lasso(alpha=1.0)\n","lasso.fit(X_train_scaled, y_train)\n","y_pred_lasso = lasso.predict(X_test_scaled)"],"metadata":{"id":"ErqajGHTcl1G"},"execution_count":null,"outputs":[]},{"cell_type":"code","source":[],"metadata":{"id":"WBGwDTzlclqH"},"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOXMCemMYlXqUMps4mP6NSK"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UY_cxc6hZ_zl"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Linear Regression"
+      ],
+      "metadata": {
+        "id": "YJGdDYNtaHxl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loading all Necessary Libraries"
+      ],
+      "metadata": {
+        "id": "6H1ji2X4aMUn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "from sklearn.datasets import fetch_california_housing\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression,Ridge,Lasso\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "from sklearn.preprocessing import StandardScaler"
+      ],
+      "metadata": {
+        "id": "nf_C9n1HaUjZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = fetch_california_housing()\n",
+        "df = pd.DataFrame(data.data, columns=data.feature_names)\n",
+        "df['Target'] = data.target\n",
+        "print(df.head(5))"
+      ],
+      "metadata": {
+        "id": "P3BcrZ42aUY-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## EDA to explore the data set"
+      ],
+      "metadata": {
+        "id": "6N451RYKbWLL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(5,5))\n",
+        "sns.histplot(df['Target'], bins=50, kde=True)\n",
+        "plt.xlabel('Target')\n",
+        "plt.ylabel('Frequency')\n",
+        "plt.title('Distribution of Target Variable')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "zHptiRkCaUFD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = df.drop('Target', axis=1)\n",
+        "y = df['Target']"
+      ],
+      "metadata": {
+        "id": "31rJk0HnaT66"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WBGwDTzlclqH"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
