--- a/Convolutional_004.ipynb
+++ b/Convolutional_004.ipynb
@@ -996,25 +996,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "feBHXRpIXMp7",
-        "outputId": "cb868a12-db1b-4443-dbe4-314986311118"
+        "outputId": "60506a1d-2484-4f5d-f6cc-aa431f3cf47f"
       },
       "id": "feBHXRpIXMp7",
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-08 06:42:38--  https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.69.207, 173.194.79.207, 108.177.96.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.69.207|:443... connected.\n",
+            "--2025-09-09 10:28:36--  https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.101.207, 142.251.2.207, 142.250.141.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.101.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 109540975 (104M) [application/zip]\n",
             "Saving to: ‘pizza_steak.zip’\n",
             "\n",
-            "pizza_steak.zip     100%[===================>] 104.47M  33.2MB/s    in 3.1s    \n",
+            "pizza_steak.zip     100%[===================>] 104.47M   186MB/s    in 0.6s    \n",
             "\n",
-            "2025-09-08 06:42:41 (33.2 MB/s) - ‘pizza_steak.zip’ saved [109540975/109540975]\n",
+            "2025-09-09 10:28:37 (186 MB/s) - ‘pizza_steak.zip’ saved [109540975/109540975]\n",
             "\n"
           ]
         }
@@ -1033,7 +1033,7 @@
         "id": "8bYSqNeyXMl8"
       },
       "id": "8bYSqNeyXMl8",
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1046,10 +1046,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "07X5aLarXMis",
-        "outputId": "530f61dc-726e-44af-e765-cc7c75ae5bba"
+        "outputId": "2352e6ab-e1e8-4460-faff-b7e743a25572"
       },
       "id": "07X5aLarXMis",
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1070,10 +1070,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nqlciyibXLXw",
-        "outputId": "f767eef0-4357-4b31-be8a-b6507142f5f3"
+        "outputId": "5ce1b72b-2769-4641-9c1e-5f166e3d54c8"
       },
       "id": "nqlciyibXLXw",
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,13 +1091,13 @@
       ],
       "metadata": {
         "id": "xUgpM4sztDhn",
-        "outputId": "6c3f8fb3-1cc1-4219-a778-726a84009042",
+        "outputId": "dfb0bcf3-7bf4-42a0-e457-7cf764b3eb8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "xUgpM4sztDhn",
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,13 +1240,13 @@
       ],
       "metadata": {
         "id": "xBgz9F5ItDQN",
-        "outputId": "b7e2a181-caed-4af7-fc2a-12d98c8e4055",
+        "outputId": "ff76cc89-5c20-4af4-baa7-2152f5df7888",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "xBgz9F5ItDQN",
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,11 +1254,11 @@
           "text": [
             "There are 2 directories and 0 images in 'pizza_steak'.\n",
             "There are 2 directories and 0 images in 'pizza_steak/train'.\n",
-            "There are 0 directories and 750 images in 'pizza_steak/train/steak'.\n",
             "There are 0 directories and 750 images in 'pizza_steak/train/pizza'.\n",
+            "There are 0 directories and 750 images in 'pizza_steak/train/steak'.\n",
             "There are 2 directories and 0 images in 'pizza_steak/test'.\n",
-            "There are 0 directories and 250 images in 'pizza_steak/test/steak'.\n",
-            "There are 0 directories and 250 images in 'pizza_steak/test/pizza'.\n"
+            "There are 0 directories and 250 images in 'pizza_steak/test/pizza'.\n",
+            "There are 0 directories and 250 images in 'pizza_steak/test/steak'.\n"
           ]
         }
       ]
@@ -1291,13 +1291,13 @@
       ],
       "metadata": {
         "id": "BEKcIH78tDNO",
-        "outputId": "13d01dd7-8e6a-4deb-9016-3985c9cb8e4a",
+        "outputId": "2ad8a48b-f185-4d21-f390-1bea36d64f60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "BEKcIH78tDNO",
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1305,11 +1305,11 @@
           "text": [
             "There are 2 directories and 0 images in pizza_steak\n",
             "There are 2 directories and 0 images in pizza_steak/train\n",
-            "There are 0 directories and 750 images in pizza_steak/train/steak\n",
             "There are 0 directories and 750 images in pizza_steak/train/pizza\n",
+            "There are 0 directories and 750 images in pizza_steak/train/steak\n",
             "There are 2 directories and 0 images in pizza_steak/test\n",
-            "There are 0 directories and 250 images in pizza_steak/test/steak\n",
-            "There are 0 directories and 250 images in pizza_steak/test/pizza\n"
+            "There are 0 directories and 250 images in pizza_steak/test/pizza\n",
+            "There are 0 directories and 250 images in pizza_steak/test/steak\n"
           ]
         }
       ]
@@ -1326,10 +1326,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec472718-0ca9-488a-beaa-1db6ad278729"
+        "outputId": "f108fced-5f67-4b8e-8eff-828e8d8ff48d"
       },
       "id": "oo9zZQT3tDJu",
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1339,7 +1339,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 15
         }
       ]
     },
@@ -1357,13 +1357,13 @@
       ],
       "metadata": {
         "id": "hDD4EGzNtDB7",
-        "outputId": "a28445d9-1257-42c8-d6bd-3d8f2673ba7a",
+        "outputId": "3a3d61c3-d6f3-4237-cfd4-a6e9e192473b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "hDD4EGzNtDB7",
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1470,7 +1470,7 @@
         "outputId": "2c42dab6-9931-4b8e-b30a-78b9f398ed07"
       },
       "id": "jlvnBaG82CHX",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1522,7 +1522,7 @@
         "outputId": "97e44e0d-397f-4f62-8a33-2c07777292ad"
       },
       "id": "_vU7sAbg2B7a",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1696,7 +1696,7 @@
         "outputId": "c3650958-7d4c-4e95-bb6b-3da0b79fd66a"
       },
       "id": "jPsoR5qm2BwX",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1738,7 +1738,7 @@
         }
       },
       "id": "NtTFemxxQQTO",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1891,7 +1891,7 @@
         "outputId": "32a4fc11-f3d7-470f-b8ca-dc8bb248c22a"
       },
       "id": "d327mIsN2Bmv",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1933,7 +1933,7 @@
         "outputId": "5e33a6ae-b97a-4fb1-d416-7d2a3ce67529"
       },
       "id": "1GWsn7-72Bcn",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2097,7 +2097,7 @@
         "id": "5zCp_VzWGuCn"
       },
       "id": "5zCp_VzWGuCn",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2118,7 +2118,7 @@
         "outputId": "2f78284c-c9af-4830-8bde-f53765bb71ae"
       },
       "id": "l_JFrQQlGt5o",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2164,7 +2164,7 @@
         "id": "r4KFv-wgGtws"
       },
       "id": "r4KFv-wgGtws",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -2183,43 +2183,207 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "test_datagen = ImageDataGenerator(rescale=1./255)"
+      ],
       "metadata": {
         "id": "3LGJbEj-GtoJ"
       },
       "id": "3LGJbEj-GtoJ",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**ImageDataGenerator:**\n",
+        "The ImageDataGenerator class helps us prepare our images into **Batches** as well as perform **Transformations** on them as they get loaded into the model.\n",
+        "The **rescale** is a kind of transformations we are doing.\n",
+        "**Data Augmentation** is another type of Transformation that we can do on our images.\n",
+        "The **flow_from_directory** function helps us load our images from their respective directories applying the **prescribed** transformation."
+      ],
       "metadata": {
-        "id": "zvKKm5nhGtfM"
+        "id": "hsdzSRO7_x42"
+      },
+      "id": "hsdzSRO7_x42"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data = train_datagen.flow_from_directory(train_dir,\n",
+        "                                               target_size=(224,224),\n",
+        "                                               batch_size=32,\n",
+        "                                               class_mode=\"binary\",\n",
+        "                                               seed=42)\n",
+        "test_data = test_datagen.flow_from_directory(test_dir,\n",
+        "                                               target_size=(224,224),\n",
+        "                                               batch_size=32,\n",
+        "                                               class_mode=\"binary\",\n",
+        "                                               seed=42)"
+      ],
+      "metadata": {
+        "id": "zvKKm5nhGtfM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9f0e08a7-52b1-46d2-d119-0be555c481cb"
       },
       "id": "zvKKm5nhGtfM",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 1500 images belonging to 2 classes.\n",
+            "Found 500 images belonging to 2 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Functions Explanation\n",
+        "- Because of the structuring of directories, the class name gets inferred by the subdirectory structure such as **train_dir** and **test_dir**.\n",
+        "- The **target_size** parameter defines the size (height and width).\n",
+        "- The **class_mode** value of **binary** defines our classification problem type. If we have more than two classes then we would use **categorical**\n",
+        "- The **batch_size** defines how many images will be in each batch. We have **batch_size=32** which is default somehow."
+      ],
+      "metadata": {
+        "id": "NXopBL9gB9x7"
+      },
+      "id": "NXopBL9gB9x7"
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "images, labels = next(train_data)\n",
+        "len(images), len(labels)"
+      ],
       "metadata": {
-        "id": "Spf3lPvCGaDK"
+        "id": "Spf3lPvCGaDK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce043ba6-b1d8-428f-c6d1-e22915c0bd74"
       },
       "id": "Spf3lPvCGaDK",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(32, 32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- **train_data** has images in batches and labels of size 2. It is like a big set of images with labels.\n",
+        "- The **next** function fetches each batch along with images."
+      ],
+      "metadata": {
+        "id": "xSVO886IEBeD"
+      },
+      "id": "xSVO886IEBeD"
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "images[1], images[1].shape"
+      ],
       "metadata": {
-        "id": "0cc7OZIpGZ6K"
+        "id": "0cc7OZIpGZ6K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "667a751e-a2a7-40a5-f3ea-507d2e3f1403"
       },
       "id": "0cc7OZIpGZ6K",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[[0.7058824 , 0.5176471 , 0.227451  ],\n",
+              "         [0.8235295 , 0.63529414, 0.3372549 ],\n",
+              "         [0.8862746 , 0.7058824 , 0.40000004],\n",
+              "         ...,\n",
+              "         [0.44705886, 0.28627452, 0.30980393],\n",
+              "         [0.60784316, 0.48627454, 0.47450984],\n",
+              "         [0.5921569 , 0.46274513, 0.43529415]],\n",
+              " \n",
+              "        [[0.8196079 , 0.6392157 , 0.3372549 ],\n",
+              "         [0.8588236 , 0.6784314 , 0.37254903],\n",
+              "         [0.9294118 , 0.75294125, 0.43529415],\n",
+              "         ...,\n",
+              "         [0.40000004, 0.22352943, 0.2509804 ],\n",
+              "         [0.5372549 , 0.4039216 , 0.40000004],\n",
+              "         [0.68235296, 0.5647059 , 0.53333336]],\n",
+              " \n",
+              "        [[0.90196085, 0.7254902 , 0.40784317],\n",
+              "         [0.8941177 , 0.7294118 , 0.40000004],\n",
+              "         [0.95294124, 0.78823537, 0.45098042],\n",
+              "         ...,\n",
+              "         [0.33333334, 0.12156864, 0.1764706 ],\n",
+              "         [0.40784317, 0.24313727, 0.25882354],\n",
+              "         [0.6156863 , 0.49411768, 0.47450984]],\n",
+              " \n",
+              "        ...,\n",
+              " \n",
+              "        [[0.34509805, 0.8313726 , 0.8705883 ],\n",
+              "         [0.41960788, 0.94117653, 0.9686275 ],\n",
+              "         [0.3372549 , 0.89019614, 0.92549026],\n",
+              "         ...,\n",
+              "         [0.95294124, 0.23137257, 0.08235294],\n",
+              "         [0.9450981 , 0.22352943, 0.07450981],\n",
+              "         [0.9176471 , 0.19607845, 0.04705883]],\n",
+              " \n",
+              "        [[0.2392157 , 0.8000001 , 0.86274517],\n",
+              "         [0.15294118, 0.7725491 , 0.8196079 ],\n",
+              "         [0.14901961, 0.8235295 , 0.8705883 ],\n",
+              "         ...,\n",
+              "         [0.9607844 , 0.2392157 , 0.09019608],\n",
+              "         [0.9490197 , 0.227451  , 0.07843138],\n",
+              "         [0.9843138 , 0.2627451 , 0.1137255 ]],\n",
+              " \n",
+              "        [[0.10588236, 0.7294118 , 0.81568635],\n",
+              "         [0.04313726, 0.7490196 , 0.81568635],\n",
+              "         [0.01960784, 0.78823537, 0.85098046],\n",
+              "         ...,\n",
+              "         [0.94117653, 0.21960786, 0.07058824],\n",
+              "         [0.8980393 , 0.1764706 , 0.02745098],\n",
+              "         [0.9843138 , 0.26666668, 0.10980393]]], dtype=float32),\n",
+              " (224, 224, 3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Creating a model(starting with a baseline)**\n",
+        "- A simple **heuristic for computer vision models** is to use an architecture which perform well on **ImageNet**. ImageNet is a diverse collection of images for different computer vision models\n",
+        "- Let's start with a simple model with 3-layers initially."
+      ],
+      "metadata": {
+        "id": "pRpY9v2DFjgK"
+      },
+      "id": "pRpY9v2DFjgK"
     },
     {
       "cell_type": "code",
@@ -2248,6 +2412,96 @@
         "id": "9lFApeMxGZhp"
       },
       "id": "9lFApeMxGZhp",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "STZp6e2K_V8Q"
+      },
+      "id": "STZp6e2K_V8Q",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LKNkiHEe_V0Q"
+      },
+      "id": "LKNkiHEe_V0Q",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fVhqjYJ__VrH"
+      },
+      "id": "fVhqjYJ__VrH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6kMWsyjyFdtO"
+      },
+      "id": "6kMWsyjyFdtO",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XUku4sFwFdTZ"
+      },
+      "id": "XUku4sFwFdTZ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AVCTDglSFdIb"
+      },
+      "id": "AVCTDglSFdIb",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1-7yGmVXFc-e"
+      },
+      "id": "1-7yGmVXFc-e",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0LW8EWjjFc0t"
+      },
+      "id": "0LW8EWjjFc0t",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lP-Se28UFcqG"
+      },
+      "id": "lP-Se28UFcqG",
       "execution_count": null,
       "outputs": []
     }
