--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -1,1 +1,338 @@
-{"metadata":{"kernelspec":{"language":"python","display_name":"Python 3","name":"python3"},"language_info":{"name":"python","version":"3.11.13","mimetype":"text/x-python","codemirror_mode":{"name":"ipython","version":3},"pygments_lexer":"ipython3","nbconvert_exporter":"python","file_extension":".py"},"kaggle":{"accelerator":"none","dataSources":[],"dockerImageVersionId":31089,"isInternetEnabled":false,"language":"python","sourceType":"notebook","isGpuEnabled":false}},"nbformat_minor":4,"nbformat":4,"cells":[{"cell_type":"code","source":"# This Python 3 environment comes with many helpful analytics libraries installed\n# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n# For example, here's several helpful packages to load\n\nimport numpy as np # linear algebra\nimport pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n\n# Input data files are available in the read-only \"../input/\" directory\n# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n\nimport os\nfor dirname, _, filenames in os.walk('/kaggle/input'):\n    for filename in filenames:\n        print(os.path.join(dirname, filename))\n\n# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session","metadata":{"_uuid":"8f2839f25d086af736a60e9eeb907d3b93b6e0e5","_cell_guid":"b1076dfc-b9ad-4769-8c92-a6c4dae69d19","trusted":true},"outputs":[],"execution_count":null},{"cell_type":"code","source":"print(\"Hello, world\")","metadata":{"trusted":true,"execution":{"iopub.status.busy":"2025-09-17T06:47:23.876758Z","iopub.execute_input":"2025-09-17T06:47:23.877071Z","iopub.status.idle":"2025-09-17T06:47:23.890789Z","shell.execute_reply.started":"2025-09-17T06:47:23.877040Z","shell.execute_reply":"2025-09-17T06:47:23.887926Z"}},"outputs":[{"name":"stdout","text":"Hello, world\n","output_type":"stream"}],"execution_count":1}]}
+{
+  "metadata": {
+    "kernelspec": {
+      "language": "python",
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.11.13",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "kaggle": {
+      "accelerator": "none",
+      "dataSources": [],
+      "dockerImageVersionId": 31089,
+      "isInternetEnabled": false,
+      "language": "python",
+      "sourceType": "notebook",
+      "isGpuEnabled": false
+    },
+    "colab": {
+      "provenance": []
+    }
+  },
+  "nbformat_minor": 0,
+  "nbformat": 4,
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "trusted": true,
+        "execution": {
+          "iopub.status.busy": "2025-09-17T06:47:23.876758Z",
+          "iopub.execute_input": "2025-09-17T06:47:23.877071Z",
+          "iopub.status.idle": "2025-09-17T06:47:23.890789Z",
+          "shell.execute_reply.started": "2025-09-17T06:47:23.877040Z",
+          "shell.execute_reply": "2025-09-17T06:47:23.887926Z"
+        },
+        "id": "It3-4Qw_cBQ6"
+      },
+      "outputs": [],
+      "execution_count": 1
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Transfer Learning with TensorFlow: Feature Extraction**\n",
+        "\n",
+        "To improve models we can use several tenchniques like\n",
+        "- Adding More Layers\n",
+        "- Changing the Learning Rate\n",
+        "- Adjusting the Number of Neurons Per Layer\n",
+        "\n",
+        "However, instead of above we can use **Transfer Learning**.\n",
+        "- **Transfer Learning** is taking the patterns (also called weights) from another model and applying it on new problem.\n",
+        "\n",
+        "Two main benefits of using Transfer Learning.\n",
+        "- Leverage existing Neural Network Architecture proven to work on problems similar to our own\n",
+        "- Using **Already Learned Patterns** on similar data to our own\n",
+        "\n",
+        "So, instead of hand-crafting our own **Neural Network Architecture or building them from scratch** we can utilize models which have worked for others.\n",
+        "\n",
+        "We can take the patterns a model has learned from datasets such as **ImageNet** and use it as a foundational model.\n",
+        "\n",
+        "**What we will Learn**\n",
+        "- Use a smaller dataset to experiment faster (10% of training samples of 10 classes of food)\n",
+        "- Build a Transfer Learning Feature Extraction model using **TensorFlow Hub**\n",
+        "- Introduce a TesnorBoard Callback to track model training results\n",
+        "\n",
+        "**Transfer Learning with TensorFlow Hub: Getting great results with only 10% of data**\n",
+        "\n",
+        "- **TensorFlow Hub:-** is a repository for existing model components. You can import and use a **Fully Trained Model** using a *URL*\n",
+        "\n",
+        "Using the **Pre-trained Models** we can get the results of a fully trained model with only 10% of data.\n",
+        "\n",
+        "**Transfer Learning often allows you to get great results with less data**\n",
+        "\n",
+        "\n",
+        "Let's download 10% of training data from **10_food_classes** dataset and use it to train a food image classifier on it.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "n919sal9cUXp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip"
+      ],
+      "metadata": {
+        "id": "5VyldLoxcStk",
+        "outputId": "9419b3f5-f377-425d-dd05-28039417f699",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-09-17 07:31:17--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.212.207, 172.217.204.207, 172.217.203.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.212.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 168546183 (161M) [application/zip]\n",
+            "Saving to: ‘10_food_classes_10_percent.zip’\n",
+            "\n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   152MB/s    in 1.1s    \n",
+            "\n",
+            "2025-09-17 07:31:18 (152 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import zipfile\n",
+        "zip_ref = zipfile.ZipFile(\"10_food_classes_10_percent.zip\")\n",
+        "zip_ref.extractall()\n",
+        "zip_ref.close()"
+      ],
+      "metadata": {
+        "id": "BB5IpZFIleoc"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "for dirpath, dirnames, filenames in os.walk(\"10_food_classes_10_percent\"):\n",
+        "  print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.\")\n"
+      ],
+      "metadata": {
+        "id": "_hccRg2Vledy",
+        "outputId": "32781754-4eb0-4f92-cf0c-9c86199f201e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Creating Data Loaders (Preparing the Data)**\n",
+        "\n",
+        "- Create the **ImageDataGenerator** class using the **flow_from_directory** method to load in our images."
+      ],
+      "metadata": {
+        "id": "2vwq043HneRL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "IMAGE_SHAPE = (224, 224)\n",
+        "BATCH_SIZE = 32\n",
+        "\n",
+        "train_dir = \"10_food_classes_10_percent/train/\"\n",
+        "test_dir = \"10_food_classes_10_percent/test/\"\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "\n",
+        "print(\"Training Images\")\n",
+        "train_data_10_percent = train_datagen.flow_from_directory(train_dir,\n",
+        "                                                          target_size=IMAGE_SHAPE,\n",
+        "                                                          batch_size=BATCH_SIZE,\n",
+        "                                                          class_mode=\"categorical\")\n",
+        "\n",
+        "\n",
+        "print(\"Testing Images\")\n",
+        "test_data = test_datagen.flow_from_directory(test_dir,\n",
+        "                                             target_size=IMAGE_SHAPE,\n",
+        "                                             batch_size=BATCH_SIZE,\n",
+        "                                             class_mode=\"categorical\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wHc9cw-8leaS",
+        "outputId": "437f92fb-1c40-4871-d0a3-138beb52bea2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Images\n",
+            "Found 750 images belonging to 10 classes.\n",
+            "Testing Images\n",
+            "Found 2500 images belonging to 10 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Setting Up Callbacks (Things to Run While our Model Trains)**\n",
+        "\n",
+        "**Callbacks** are extra functionality that you can add to your models to be performed during or after training. Some of the most important callbacks are\n",
+        "\n",
+        "- **Experiment Tracking with TensorBoard:-** Log the performance of multiple models and then view and compare these models in a visual way on **TensorBoard**. **TensorBoard** is a dashboard for inspecting **Neural Network Parameters**\n",
+        "\n",
+        "- **Model CheckPointing:-** Save your model as you train so that you can stop training if needed and continue off where you left. It is helpful if training takes a long time and cannot be done in one sitting.\n",
+        "\n",
+        "- **Early Stopping:-** Leave your model training for a arbitary amount of time and have it stop training automatically when it ceases to improve. It is helpful when you have a large dataset and do not know how long training will take.\n",
+        "\n",
+        "- The TensorBoard Callback can be accessed using\n",
+        "**tf.keras.callbacks.TensorBoard()**. - The main function of this is saving model's training performance metrics to a specified **log_dir**.\n",
+        "\n",
+        "- By default, logs are recorded every epoch using the **update_freq='epoch'** parameter. This is a good default but can slow down **Model Training.**\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Wc7otuv_pQRW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "waeWreQ2leXj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creating a tensorboard callback\n",
+        "\n",
+        "import datetime\n",
+        "def create_tensorboard_callback(dir_name, experiment_name):\n",
+        "  log_dir = dir_name + \"/\" + experiment_name + \"/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+        "  tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir)\n",
+        "  print(f\"Saving TensorBoard log files to: {log_dir}\")\n",
+        "  return tensorboard_callback\n"
+      ],
+      "metadata": {
+        "id": "lt9_L9wHleQ7"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cfuo9Vl8leIA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "98_y2fW9ld_Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
