--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -115,11 +115,11 @@
         "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip"
       ],
       "metadata": {
-        "id": "5VyldLoxcStk",
-        "outputId": "9419b3f5-f377-425d-dd05-28039417f699",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5VyldLoxcStk",
+        "outputId": "9419b3f5-f377-425d-dd05-28039417f699"
       },
       "execution_count": 2,
       "outputs": [
@@ -165,11 +165,11 @@
         "  print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.\")\n"
       ],
       "metadata": {
-        "id": "_hccRg2Vledy",
-        "outputId": "32781754-4eb0-4f92-cf0c-9c86199f201e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_hccRg2Vledy",
+        "outputId": "32781754-4eb0-4f92-cf0c-9c86199f201e"
       },
       "execution_count": 4,
       "outputs": [
@@ -244,11 +244,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "wHc9cw-8leaS",
-        "outputId": "437f92fb-1c40-4871-d0a3-138beb52bea2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wHc9cw-8leaS",
+        "outputId": "437f92fb-1c40-4871-d0a3-138beb52bea2"
       },
       "execution_count": 6,
       "outputs": [
@@ -315,6 +315,18 @@
       },
       "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- We will save the **Model** to a directory [dir_name] / [experiment_name] / [current_timestamp] where\n",
+        "- **dir_name:-** is the overall logs directory\n",
+        "- **experiment_name:-** is the particular experiment\n",
+        "- **current_timestamp:-** is the time the experiment started based on Python time *datatime.datetime().now()"
+      ],
+      "metadata": {
+        "id": "M1wTBkSs2VWx"
+      }
     },
     {
       "cell_type": "code",
