--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -53,7 +53,7 @@
         "id": "It3-4Qw_cBQ6"
       },
       "outputs": [],
-      "execution_count": 1
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -121,7 +121,7 @@
         "id": "5VyldLoxcStk",
         "outputId": "9419b3f5-f377-425d-dd05-28039417f699"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "BB5IpZFIleoc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
         "id": "_hccRg2Vledy",
         "outputId": "32781754-4eb0-4f92-cf0c-9c86199f201e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
         "id": "wHc9cw-8leaS",
         "outputId": "437f92fb-1c40-4871-d0a3-138beb52bea2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "lt9_L9wHleQ7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,10 +329,87 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Creating Models Using TensorFlow Hub**\n",
+        "\n",
+        "- In past we used to create models from scratch\n",
+        "- In here, majority of our model's layers are going to come from **TensorFlow Hub**\n",
+        "\n",
+        "We will use two models from **TensorFlow Hub**\n",
+        "\n",
+        "- 1.**ResNetV2** - a state of the art computer vision model architecture from 2016\n",
+        "- 2.**EfficientNet**- a state of the art computer vision model from 2019\n",
+        "\n",
+        "By the state of art we mean that majority of our modeles have achieved the lowest error rate on **ImageNet (ILSVRC-2012-CLS)**, the gold standard of computer vision benchmarks.\n",
+        "\n",
+        "Steps for finding models on **TensorFlow Hub**\n",
+        "1. Got to **tfhub.dev**\n",
+        "2. Select the problem domain like **Image**\n",
+        "3. Remove all **Problem Domain** filters except for the one you are working on\n",
+        "4. You will see a list of models, select the one you want to use\n",
+        "\n",
+        "**I see many models, then which one is to be used**\n",
+        "\n",
+        "- You can find a list of state of the art models on **paperswithcode.com**, a resource for collecting the latest in deep learning paper results\n",
+        "\n",
+        "- Since, our target is **Image Classification** so we would use the model that performed best on **ImageNet.**\n",
+        "\n",
+        "- On **tfhub.dev** you will find various architectures like **EfficientNetB4** which is better than **EfficientNetB0** but larger models take alot of time to compute.\n"
+      ],
+      "metadata": {
+        "id": "zWUKJMzLZ58L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We will use feature vectors URLs of two common computer vision architectures, **EfficientNetBO (2019)** and **ResNetV250 (2016)**\n",
+        "\n",
+        "Why we select only **Feature Vectors**.\n",
+        "Because Transfer Learning come into play as **Feature Extraction** and **Fine Tuning**\n",
+        "\n",
+        "1. In **transfer Learning** we take a pre-trained models as it is and apply it to our task without changes. For example, if your model is trained on **ImageNet** dataset that contains **1000** different classes of images. So, if we pass a single image to this model it will produce **1000** different outputs. It can be useful if we want to classify **1000** images.\n",
+        "\n",
+        "2. **Feature Extraction Transfer Learning** is a process where you take the underlying patterns (also called weights) a **pretrained Model** has learned and adjust its output to be more suited to your problem.\n",
+        "For example, If your model had 236 different layers (EfficientNetBO has 236 layers) and the top layer outputs **1000** classes because it was pretrained on **ImageNet.**To adjust it to your problem we might remove the top layer and replace it with our own having the right number of classes. The most important part here is that **only the top few layers become trainable, the rest remain frozen.**So, the underlying patterns remain in the rest of layers and we can utilize it for our problem.\n",
+        "\n",
+        "3. **Fine-Tuning Transfer Learning:-** is when you take the underlying patterns (also called weights) of a pre-trained model and adjust them to your problem. This means **training some, many or all layers** in pretrained model. This is applicable in scenarios where you have relatively large dataset and **your data is slightly different** from the original data on which the model was trained.\n",
+        "\n",
+        "\n",
+        "A common practice is to **Freeze** all the learned patterns in bottom layers of a **pretrained model** so that they become **un-trainable**. Then, the top 2-3 layers of the **pre-trained** model can adjust its output to our customer data (**feature extraction**).\n",
+        "As you have trained the **top layers** you can gradually **unfreeze** more and more layers and run the training process on your own data to further **fine-tune**it.\n",
+        "\n",
+        "- **Lower Layers** in a computer vision model learns **large features**. In a cat and dog classification they might learn the **outline of legs** while the layers closer to the output might learn **shape of the teeth.**\n",
+        "\n",
+        "\n",
+        "So, in **Feature Extraction** only the top 2-3 layers change but in **Fine Tuning Model** many or all of the original model get changed.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nc2Q_27koE2Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "from tensorflow.keras import layers"
+      ],
+      "metadata": {
+        "id": "cfuo9Vl8leIA"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "cfuo9Vl8leIA"
+        "id": "98_y2fW9ld_Z"
       },
       "execution_count": null,
       "outputs": []
@@ -341,7 +418,61 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "98_y2fW9ld_Z"
+        "id": "BSNGl7dooAYJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TZcQYQQ3oARZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QelaCAIhoAOa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Zv-h7b1FoALa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XOZekZ2woAIV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XSdlwwNMoAE1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Wignj0fUn_9M"
       },
       "execution_count": null,
       "outputs": []
