--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -407,20 +407,68 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Resnet 50 V2 feature vector\n",
+        "resnet_url = \"https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/4\"\n",
+        "\n",
+        "# Original: EfficientNetB0 feature vector (version 1)\n",
+        "efficientnet_url = \"https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1\"\n",
+        "\n",
+        "# # New: EfficientNetB0 feature vector (version 2)\n",
+        "# efficientnet_url = \"https://tfhub.dev/google/imagenet/efficientnet_v2_imagenet1k_b0/feature_vector/2\"\n",
+        ""
+      ],
       "metadata": {
         "id": "98_y2fW9ld_Z"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- The **URLs** are link to a saved **pretrained models** on **TensorFlow Hub**.\n",
+        "- When we use it in our model, the model will automatically downloaded for us to use\n",
+        "- We will use **KerasLayer()** inside the TensorFlow Hub library."
+      ],
+      "metadata": {
+        "id": "Vpry_f-YzbJS"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def create_model(model_url, num_classes=10):\n",
+        "  \"\"\"\n",
+        "  Takes a TensorFlow Hub URL and creates a Keras Sequential model with it.\n",
+        "\n",
+        "  Args:\n",
+        "    model_url (str): A TensorFlow Hub feature extraction URL.\n",
+        "    num_classes (int): Number of output neurons in output layer,\n",
+        "                       should be equal to number of target classes, default 10.\n",
+        "\n",
+        "  Returns:\n",
+        "    An uncompiled Keras Sequential model with model_url as feature\n",
+        "    extractor layer and Dense output layer with num_classes outputs.\n",
+        "  \"\"\"\n",
+        "  # Download the pretrained model and save it as a Keras layer\n",
+        "  feature_extractor_layer = hub.KerasLayer(model_url,\n",
+        "                                           trainable=False, # freeze the underlying patterns\n",
+        "                                           name='feature_extraction_layer',\n",
+        "                                           input_shape=IMAGE_SHAPE+(3,)) # define the input image shape\n",
+        "\n",
+        "  # Create our own model\n",
+        "  model = tf.keras.Sequential([\n",
+        "    feature_extractor_layer, # use the feature extraction layer as the base\n",
+        "    layers.Dense(num_classes, activation='softmax', name='output_layer') # create our own output layer\n",
+        "  ])\n",
+        "\n",
+        "  return model"
+      ],
       "metadata": {
         "id": "BSNGl7dooAYJ"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
