--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -54,7 +54,7 @@
         "id": "It3-4Qw_cBQ6"
       },
       "outputs": [],
-      "execution_count": 2
+      "execution_count": 4
     },
     {
       "cell_type": "markdown",
@@ -120,24 +120,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5VyldLoxcStk",
-        "outputId": "4fff608a-f021-44ac-db69-fe970a672108"
+        "outputId": "211b2179-0cf5-4f32-bc24-1a802eb774b1"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-19 07:00:24--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.24.207, 142.250.4.207, 172.217.194.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.24.207|:443... connected.\n",
+            "--2025-09-19 07:56:55--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.251.12.207, 64.233.170.207, 74.125.200.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.251.12.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip.1’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M  23.8MB/s    in 8.0s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M  19.4MB/s    in 9.1s    \n",
             "\n",
-            "2025-09-19 07:00:33 (20.2 MB/s) - ‘10_food_classes_10_percent.zip.1’ saved [168546183/168546183]\n",
+            "2025-09-19 07:57:04 (17.6 MB/s) - ‘10_food_classes_10_percent.zip.1’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "BB5IpZFIleoc"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -170,9 +170,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hccRg2Vledy",
-        "outputId": "fa8b35d7-7a02-4140-9b39-74b2ec8e28a2"
+        "outputId": "5791e712-09ed-45ac-aad0-232a86a0c31b"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,9 +251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wHc9cw-8leaS",
-        "outputId": "28b9c690-2615-483b-cf67-4570403b088c"
+        "outputId": "42205f12-8c3b-4c8a-c89b-cece0fa7cc03"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "lt9_L9wHleQ7"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "cfuo9Vl8leIA"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "98_y2fW9ld_Z"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -478,7 +478,7 @@
       "metadata": {
         "id": "XOZekZ2woAIV"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -516,16 +516,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "print(tf.config.list_physical_devices('GPU'))"
+      ],
       "metadata": {
-        "id": "Wignj0fUn_9M"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wignj0fUn_9M",
+        "outputId": "d01868e0-6619-4438-f314-ef4b43b9573d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!nvidia-smi"
+      ],
       "metadata": {
         "id": "S54N-2bBiVaV"
       },
